test-cases/final-dump/for_unbound_after.exp
Error detected during type checking of module(s) for_unbound_after
[91mfinal-dump/for_unbound_after.wybe:2:2: Uninitialised argument in call to print, argument 1
[0m
