test-cases/final-dump/for_unbound_after.wybe
for ?i in [1] { pass }
!print i